fix: fixed the problem with a gap

--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
   display: inline-block;
   margin: 0;
   padding: 0;
+  min-width: 10px;
+  min-height: 25px;
   border: 1px solid #ccc;
   font-size: 1.2em;
   font-weight: bold;
